# backend/internal/app/app.go
@@ -21,7 +21,7 @@ func RunApp(cfg *config.Config) {
 	chatsGroup := e.Group("/chats")
 	messagesGroup := e.Group("/messages")
 
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	e.GET("/swagger/*any", echoSwagger.WrapHandler)
 
 	usersGroup.POST("/", api.CreateUser)
 	usersGroup.GET("/", api.GetUsers)
@@ -32,22 +32,21 @@ func RunApp(cfg *config.Config) {
 	usersGroup.DELETE("/usr/:username", api.DeleteUserByUsername)
 	usersGroup.Use(logger.LogRequest)
 
-	chatsGroup.POST("/", api.AddUserToChat)
-	chatsGroup.Use(logger.LogRequest)
-
 	messagesGroup.POST("/", api.CreateMessage)
 	messagesGroup.GET("/", api.GetMessages)
 	messagesGroup.DELETE("/:id", api.DeleteMessageByID)
 	messagesGroup.Use(logger.LogRequest)
 
-	/*chatsGroup.POST("/", api.CreateChat)
+	chatsGroup.POST("/", api.CreateChat)
+	chatsGroup.GET("/:id", api.GetChat)
 	chatsGroup.GET("/", api.GetChats)
-	chatsGroup.GET("/messages/:id", api.GetChatMessages)
-	chatsGroup.GET("/users/:id", api.GetChatUsers)
-	chatsGroup.POST("/removeUser", api.RemoveUserFromChat)
+	chatsGroup.PUT("/:id", api.UpdateChatName)
+	chatsGroup.GET("/:id/messages", api.GetChatMessages)
+	chatsGroup.GET("/:id/users", api.GetChatUsers)
+	chatsGroup.DELETE("/", api.RemoveUserFromChat)
 	chatsGroup.DELETE("/:id", api.DeleteChat)
-
-	*/
+	chatsGroup.POST("/add", api.AddUserToChat)
+	chatsGroup.Use(logger.LogRequest)
 
 	e.Logger.Fatal(e.Start(":1323"))
 }
